--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </nav>
     </header>
     <div class="weather">
-        <input type="text" class="weather-response" placeholder="Введіть місто">
+        <input type="text" class="weather-response" placeholder="Введіть місто" required>
         <button type="button" class="weather-button">Отримати погоду</button>
         <div class="weather-total"></div>
     </div>
     <div class="coment">
         <h2>Ваш відгук</h2>
         <textarea class="text__btn" id="comment-text" cols="30" rows="5" placeholder="Напишіть свій коментар"></textarea>
-        <input class="name__input" id="name-input" type="text" placeholder="Ваше ім'я">
+        <input class="name__input" id="name-input" type="text" placeholder="Ваше ім'я" required>
         <button class="button" id="send-comment">Відправити</button>
         <div class="comments-list" id="comments-list"></div> 
     </div>
